--- a/packages/svelte-query/package.json
+++ b/packages/svelte-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tanstack/svelte-query",
+  "name": "@tanstack/svelte-query-v5",
   "version": "5.14.2",
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
   "author": "Lachlan Collins",
@@ -21,8 +21,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "svelte": "./dist/index.js",
-      "import": "./dist/index.js"
+      "svelte": "./dist/index",
+      "import": "./dist/index"
     },
     "./package.json": "./package.json"
   },
@@ -45,12 +45,12 @@
     "@tanstack/query-core": "workspace:*"
   },
   "devDependencies": {
-    "@sveltejs/package": "^2.2.2",
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
-    "@testing-library/svelte": "^4.0.4",
-    "eslint-plugin-svelte": "^2.32.0",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.4",
+    "@sveltejs/package": "^2.2.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@testing-library/svelte": "^4.0.5",
+    "eslint-plugin-svelte": "^2.35.1",
+    "svelte": "5.0.0-next.26",
+    "svelte-check": "^3.6.2",
     "svelte-eslint-parser": "^0.32.2"
   },
   "peerDependencies": {
