--- a/packages/svelte-query/tsconfig.json
+++ b/packages/svelte-query/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": { "verbatimModuleSyntax": true },
   "include": [
     "src/**/*.js",
     "src/**/*.ts",
