--- a/packages/svelte-query/package.json
+++ b/packages/svelte-query/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@tanstack/svelte-query-v5",
-  "version": "5.14.2",
+  "name": "svelte-query-z",
+  "version": "5.14.2-beta",
+  "private": false,
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
-  "author": "Lachlan Collins",
+  "author": "zhiheng",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,20 +16,14 @@
     "url": "https://github.com/sponsors/tannerlinsley"
   },
   "type": "module",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.js",
-  "svelte": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "svelte": "./dist/index",
-      "import": "./dist/index"
-    },
-    "./package.json": "./package.json"
+      "default": "./dist/index.js"
+    }
   },
   "files": [
     "dist",
-    "src",
     "!dist/__tests__",
     "!src/__tests__"
   ],
@@ -39,21 +34,22 @@
     "test:lib": "vitest run --coverage",
     "test:lib:dev": "pnpm run test:lib --watch",
     "test:build": "publint --strict",
-    "build": "svelte-package --input ./src --output ./dist"
+    "build": "svelte-package --input ./src --output ./dist",
+    "package": "svelte-package --input ./src && publint"
   },
   "dependencies": {
     "@tanstack/query-core": "workspace:*"
   },
   "devDependencies": {
-    "@sveltejs/package": "^2.2.4",
+    "@sveltejs/package": "^2.2.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/svelte": "^4.0.5",
     "eslint-plugin-svelte": "^2.35.1",
     "svelte": "5.0.0-next.26",
     "svelte-check": "^3.6.2",
-    "svelte-eslint-parser": "^0.32.2"
+    "svelte-eslint-parser": "^0.33.1"
   },
   "peerDependencies": {
-    "svelte": "^3.54.0 || ^4.0.0 || ^5.0.0-next.0"
+    "svelte": "^5.0.0-next.26"
   }
 }
