--- a/packages/svelte-query/package.json
+++ b/packages/svelte-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-query-z",
+  "name": "svelte-query-test",
   "version": "5.14.2-beta",
   "private": false,
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
