--- a/packages/svelte-query/package.json
+++ b/packages/svelte-query/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-query",
-  "version": "5.14.2-beta",
+  "name": "svelte-query-z",
+  "version": "5.14.2-beta.0",
   "private": false,
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
   "author": "zhiheng",
