--- a/examples/svelte/svelte-melt/package.json
+++ b/examples/svelte/svelte-melt/package.json
@@ -15,21 +15,23 @@
 		"@sveltejs/adapter-auto": "^3.0.1",
 		"@sveltejs/kit": "^2.0.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
-		"@tanstack/svelte-query": "workspace:*",
-		"@tanstack/svelte-query-devtools": "workspace:^5.0.0",
+		"@tanstack/svelte-query-devtools": "workspace:^",
 		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.16.0",
-		"@typescript-eslint/parser": "^6.16.0",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "5.0.0-next.26",
+		"svelte": "next",
 		"svelte-check": "^3.6.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tanstack/svelte-query": "workspace:*"
+	}
 }
