--- a/packages/svelte-query-devtools/package.json
+++ b/packages/svelte-query-devtools/package.json
@@ -20,6 +20,11 @@
       "svelte": "./dist/index.js",
       "import": "./dist/index.js"
     },
+    "./dev": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./src/index.ts",
+      "import": "./src/index.ts"
+    },
     "./package.json": "./package.json"
   },
   "files": [
@@ -42,7 +47,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.6",
     "@tanstack/svelte-query": "workspace:*",
     "eslint-plugin-svelte": "^2.32.0",
-    "svelte": "^4.0.0",
+    "svelte": "5.0.0-next.27",
     "svelte-check": "^3.4.4",
     "svelte-eslint-parser": "^0.32.2"
   },
