--- a/packages/svelte-query/package.json
+++ b/packages/svelte-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tanstack/svelte-query",
-  "version": "5.14.2-beta.1",
+  "version": "5.14.2-beta.2",
   "private": false,
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
   "author": "zhiheng",
@@ -19,7 +19,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+      "default": "./dist/index.js"
+    },
+    "./dev": {
+      "types": "./dist/index.d.ts",
+      "default": "./src/index"
     }
   },
   "files": [
@@ -39,15 +43,14 @@
     "package": "svelte-package --input ./src && publint"
   },
   "dependencies": {
-    "@tanstack/query-core": "workspace:*",
-    "solid-js": "^1.8.7"
+    "@tanstack/query-core": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/package": "^2.2.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/svelte": "^4.0.5",
     "eslint-plugin-svelte": "^2.35.1",
-    "svelte": "5.0.0-next.26",
+    "svelte": "5.0.0-next.27",
     "svelte-check": "^3.6.2",
     "svelte-eslint-parser": "^0.33.1"
   },
