--- a/examples/svelte/svelte-melt/package.json
+++ b/examples/svelte/svelte-melt/package.json
@@ -24,7 +24,7 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "next",
+		"svelte": "5.0.0-next.29",
 		"svelte-check": "^3.6.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
