--- a/packages/svelte-query-runes/package.json
+++ b/packages/svelte-query-runes/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tanstack/svelte-query",
-  "version": "5.14.2-beta.4",
+  "name": "svelte-query-runes",
+  "version": "5.14.2-beta.10",
   "private": false,
   "description": "Primitives for managing, caching and syncing asynchronous and remote data in Svelte",
   "author": "zhiheng",
@@ -40,21 +40,22 @@
     "test:lib:dev": "pnpm run test:lib --watch",
     "test:build": "publint --strict",
     "build": "svelte-package --input ./src --output ./dist",
-    "package": "svelte-package --input ./src && publint"
+    "package": "svelte-package --input ./src && publint",
+    "pack": "pnpm pack --pack-destination"
   },
   "dependencies": {
-    "@tanstack/query-core": "workspace:*"
+    "@tanstack/query-core": "latest"
   },
   "devDependencies": {
-    "@sveltejs/package": "^2.2.5",
+    "@sveltejs/package": "^2.2.6",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/svelte": "^4.0.5",
     "eslint-plugin-svelte": "^2.35.1",
-    "svelte": "5.0.0-next.27",
+    "svelte": "5.0.0-next.36",
     "svelte-check": "^3.6.2",
     "svelte-eslint-parser": "^0.33.1"
   },
   "peerDependencies": {
-    "svelte": "^5.0.0-next.26"
+    "svelte": "^5.0.0-next.36"
   }
 }
